Fixed wording on Epic job description.

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                         <div class="content">
                             <div class="item">
                                 <h3 class="title">Software Developer, Intern - <span class="place"><a href="http://www.epic.com/">Epic Systems</a></span> <span class="year">(May 2014 - August 2014)</span></h3>
-                                <p>Eased the distribution of digital ultrasound images by creating patient facing web and mobile viewers that interface with an existing patient portal.</p>
+                                <p>Eased the distribution of digital ultrasound images by creating patient facing web and mobile applications that interface with an existing patient portal.</p>
                             </div><!--//item-->
                             <div class="item">
                                 <h3 class="title">Software Engineer, Intern - <span class="place"><a href="http://www3.gehealthcare.com/en">GE Healthcare</a></span> <span class="year">(May 2013 - August 2013)</span></h3>
