Fixed a mistyped url.

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                                 <div class="desc col-md-8 col-sm-8 col-xs-12">
                                     <h3 class="title"><a href="https://github.com/epes/twepes" target="_blank">twepes - Twitch IRC Framework</a> <span class="label label-theme">Open Source</span></h3>
                                     <p> Multithreaded Java framework built on top of the Twitch API to capture and publish various IRC events.</p>
-                                    <p><a class="more-link" href="hhttps://github.com/epes/twepes" target="_blank"><i class="fa fa-external-link"></i> Find out more</a></p>
+                                    <p><a class="more-link" href="https://github.com/epes/twepes" target="_blank"><i class="fa fa-external-link"></i> Find out more</a></p>
                                 </div><!--//desc-->                          
                             </div><!--//item-->
 
