--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                             <div class="skillset">
                                
                                 <div class="item">
-                                    <h3 class="level-title">Java<span class="level-label" data-toggle="tooltip" data-placement="left" data-animation="true" title="You can use the tooltip to add more info...">Advanced</span></h3>
+                                    <h3 class="level-title">Java<span class="level-label">Advanced</span></h3>
                                     <div class="level-bar">
                                         <div class="level-bar-inner" data-level="95%">
                                         </div>                                      
@@ -185,7 +185,7 @@
                                 </div><!--//item-->
 
                                 <div class="item">
-                                    <h3 class="level-title">HTML &amp; CSS<span class="level-label" data-toggle="tooltip" data-placement="left" data-animation="true" title="You can use the tooltip to add more info...">Advanced</span></h3>
+                                    <h3 class="level-title">HTML &amp; CSS<span class="level-label" >Advanced</span></h3>
                                     <div class="level-bar">
                                         <div class="level-bar-inner" data-level="90%">
                                         </div>                                      
@@ -193,7 +193,7 @@
                                 </div><!--//item-->
 
                                 <div class="item">
-                                    <h3 class="level-title">Android<span class="level-label" data-toggle="tooltip" data-placement="left" data-animation="true" title="You can use the tooltip to add more info...">Intermediate</span></h3>
+                                    <h3 class="level-title">Android<span class="level-label">Intermediate</span></h3>
                                     <div class="level-bar">
                                         <div class="level-bar-inner" data-level="85%">
                                         </div>                                      
