Added additional projects.

--- a/index.html
+++ b/index.html
@@ -107,13 +107,45 @@
                             </div><!--//item-->
 
                             <hr class="divider" />
+
+                            <div class="item row">
+                                <a class="col-md-4 col-sm-4 col-xs-12" href="http://challengepost.com/software/mtanks" target="_blank">
+                                <img class="img-responsive project-image" src="assets/images/projects/project_mtanks.png" alt="project name" />
+                                </a>
+                                <div class="desc col-md-8 col-sm-8 col-xs-12">
+                                    <h3 class="title"><a href="http://challengepost.com/software/mtanks" target="_blank">MTanks - MHacks Submission</a> <span class="label label-theme">Open Source</span></h3>
+                                    <p>Educational programming game.</p>
+                                    <p><a class="more-link" href="http://challengepost.com/software/mtanks" target="_blank"><i class="fa fa-external-link"></i> Find out more</a></p>
+                                </div><!--//desc-->                          
+                            </div><!--//item-->
+
+                            <div class="item row">
+                                <div class="col-md-4 col-sm-4 col-xs-12" target="_blank">
+                                <img class="img-responsive project-image" src="assets/images/projects/project_fayvrit.png" alt="project name" />
+                                </div>
+                                <div class="desc col-md-8 col-sm-8 col-xs-12">
+                                    <h3 class="title"><a href="http://fayvrit.com" target="_blank">Microprocessors - EE367 - Class Project</a></h3>
+                                    <p>Breadboard 8-bit Microprocessor.</p>
+                                </div><!--//desc-->                          
+                            </div><!--//item-->
+
+                            <div class="item row">
+                                <a class="col-md-4 col-sm-4 col-xs-12" href="http://fayvrit.com" target="_blank">
+                                <img class="img-responsive project-image" src="assets/images/projects/project_fayvrit.png" alt="project name" />
+                                </a>
+                                <div class="desc col-md-8 col-sm-8 col-xs-12">
+                                    <h3 class="title"><a href="http://fayvrit.com" target="_blank">Fayvrit</a></h3>
+                                    <p>Educational programming game.</p>
+                                    <p><a class="more-link" href="http://fayvrit.com" target="_blank"><i class="fa fa-external-link"></i> Find out more</a></p>
+                                </div><!--//desc-->                          
+                            </div><!--//item-->
                             
                             <div class="item row">
                                 <a class="col-md-4 col-sm-4 col-xs-12" href="https://github.com/epes/twepes" target="_blank">
                                 <img class="img-responsive project-image" src="assets/images/projects/project_twepes.png" alt="project name" />
                                 </a>
                                 <div class="desc col-md-8 col-sm-8 col-xs-12">
-                                    <h3 class="title"><a href="https://github.com/epes/twepes" target="_blank">twepes - Twitch IRC Framework</a> <span class="label label-theme">Open Source</span></h3>
+                                    <h3 class="title"><a href="https://github.com/epes/twepes" target="_blank">twepes - Twitch IRC Library</a> <span class="label label-theme">Open Source</span></h3>
                                     <p> Multithreaded Java framework built on top of the Twitch API to capture and publish various IRC events.</p>
                                     <p><a class="more-link" href="https://github.com/epes/twepes" target="_blank"><i class="fa fa-external-link"></i> Find out more</a></p>
                                 </div><!--//desc-->                          
