Added additional info about CS361 project.

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                         <h2 class="heading">Projects</h2>
                         <div class="content">                       
                             <div class="item featured text-center">
-                                <h3 class="title"><a href="http://eperjesi.me/lolup" target="_blank">lolup</a><span class="label label-theme">Open Source</span></h3>
+                                <h3 class="title">Most Recent: <a href="http://eperjesi.me/lolup" target="_blank">lolup</a><span class="label label-theme">Open Source</span></h3>
                                 <p class="summary">Are the League of Legends servers online?</p>
                                 <div class="featured-image">
                                     <a href="http://eperjesi.me/lolup" target="_blank">
@@ -171,7 +171,7 @@
                                 </div>
                                 <div class="desc col-md-8 col-sm-8 col-xs-12">
                                     <h3 class="title">Software Engineering - CS361 - Class Project</h3>
-                                    <p>Teaching-course web application that handles course manipulation, login authentication, email notifications, attendance, and payments.</p>
+                                    <p>Acted as the scrum master as well as the group leader of a group of five. Our group won as the best application of the class. The project was a teaching-course web application that handles course manipulation, login authentication, email notifications, attendance, and payments.</p>
                                 </div><!--//desc-->                          
                             </div><!--//item-->
 
